# Blue-and-Pink-Synth-Editor

./: .gitignore  BlueAndPinkSynthEditor.desktop  BlueAndPinkSynthEditor.spec  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  NymphesEdit.spec  README.md  TODO.md  app_config.ini  changelog.md  icons.icns  pyproject.toml  run.py  setup.py
docs/: README.md
docs/html/: Reference Manual - In Progress.html
nymphes_gui/: NymphesGuiApp.py  __main__.py  app_config.ini  nymphesgui.kv
rpi/: BlueAndPinkSynthEditor.desktop
src/NymphesEdit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/activation_code_generator/: activation_code_verification.py
src/activation_code_verifier/: activation_code_common.py  activation_code_verification.py  code_verifier.py  common.py
src/blue_and_pink_synth_editor/: BlueAndPinkSynthEditorApp.py  BlueAndPinkSynthEditorApp_RPi.py  BlueAndPinkSynthEditorLicenseKey_public.pem  __main__.py  activation_code_checking.py  app_config.ini  blueandpinksyntheditor.kv  code_verification.py  demo_mode_popup.py  error_dialog.py  load_dialog.py  misc_widgets.py  save_dialog.py  synth_editor_value_controls.py  value_control.py
src/blue_and_pink_synth_editor/ui_controls/: bottom_bar.kv  bottom_bar.py  chords_screen.kv  chords_screen.py  demo_mode_popup.kv  demo_mode_popup.py  demo_mode_screen.kv  demo_mode_screen.py  error_dialog.kv  error_dialog.py  file_load_screen.kv  file_load_screen.py  left_bar.kv  left_bar.py  load_dialog.kv  load_dialog.py  misc_widgets.py  nymphes_setup_instructions_popup.kv  nymphes_setup_instructions_popup.py  oscillator_section_screen.kv  params_grid_lfo_config_cell.kv  params_grid_lfo_config_cell.py  params_grid_mod_cell.kv  params_grid_mod_cell.py  params_grid_non_mod_cell.kv  params_grid_non_mod_cell.py  preset_load_screen.kv  preset_load_screen.py  preset_save_screen.kv  preset_save_screen.py  save_dialog.kv  save_dialog.py  settings_screen.kv  settings_screen.py  synth_editor_value_controls.kv  synth_editor_value_controls.py  top_bar.kv  top_bar.py
src/nymphes_edit/: NymphesEditApp.py  __main__.py  app_config.ini  nymphesedit.kv
src/nymphes_gui/: NymphesGuiApp.py  __main__.py  app_config.ini  nymphes_osc_process.py  nymphesgui.kv
src/nymphes_osc/: MidiConnectionEvents.py  NymphesMIDI.py  NymphesOSC.py  NymphesPreset.py  PresetEvents.py  README.md  __main__.py  cli.py  presetstesting2.txt
src/nymphes_osc/protobuf/: preset.proto  preset_pb2.py  preset_pb2.pyi
