[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BlueAndPinkSynthEditor"
version = "1.0.3-beta"
description = "A full-featured editor for the Dreadbox Nymphes MIDI synthesizer"
readme = "README.md"
authors = [{name = "Scott Lumsden", email = "scott@scottlumsden.com"}]
license = { file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["MIDI", "OSC", "Nymphes"]
dependencies = [
    "python-osc",
    "netifaces",
    "kivy[base]",
    "zeroconf",
    "pyinstaller",
    "cryptography"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/jtpack/Blue-and-Pink-Synth-Editor"
